@@ -1,0 +1,19 @@
+Left TODO:
+
+ * Find initial theme, and if it's not a metatheme keep it around to put
+   in the list when selecting a different theme.
+
+ * Change custom theme removal addition to handle above
+
+ * Change custom theme text to indicate what themes are being used.
+
+ * Create an icon for custom themes
+
+ * Create a default icon.
+
+ * Notice when a directory is removed.
+
+ * Sanity check saving.
+
+
+
