@@ -1,3 +1,10 @@
+Thu Jan  2 08:57:54 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c: correctly merge disk updates and the
+	current setup.
+
+	* TODO: Add a TODO
+
 2002-12-31  Seth Nickell  <snickell@stanford.edu>
 
 	* theme-thumbnail.c: (create_image):
